--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,3 @@
 {
-  "buildCommand": "cd frontend && npm install && npm run build",
-  "outputDirectory": "frontend/.next",
-  "framework": "nextjs",
-  "rewrites": [
-    { "source": "/(.*)", "destination": "/frontend/$1" }
-  ],
-  "installCommand": "cd frontend && npm install"
+  "rootDirectory": "frontend"
 } 
