--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,17 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.1.2",
+    "@mui/material": "^7.1.2",
+    "@mui/system": "^7.1.1",
     "@react-three/drei": "^10.1.2",
     "@react-three/fiber": "^9.1.2",
-    "axios": "^1.9.0",
+    "axios": "^1.10.0",
     "framer-motion": "^12.15.0",
-    "next": "15.3.3",
+    "jwt-decode": "^4.0.0",
+    "next": "^15.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "three": "^0.177.0"
