--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,5 @@
 {
-  "rewrites": [
-    { "source": "/(.*)", "destination": "/frontend/$1" }
-  ],
-  "buildCommand": "cd frontend && npm install && npm run build",
-  "outputDirectory": "frontend/.next",
-  "installCommand": "cd frontend && npm install"
-} 
+    "framework": "nextjs",
+    "buildCommand": "npm run build",
+    "installCommand": "npm install"
+  } % 
