Fixed the error

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,7 @@
 {
     "framework": "nextjs",
-    "buildCommand": "npm run build",
-    "installCommand": "npm install"
-  } 
+    "buildCommand": "cd frontend && npm run build",
+    "installCommand": "cd frontend && npm install",
+    "outputDirectory": "frontend/.next",
+    "nodeVersion": "18.x"
+   } 
